docs/7.52/md/abennews-46-se30.md
  

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews.htm) →  [Changes in Releases 4.xx](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-4.htm) →  [Changes in Release 4.6A](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-46a.htm) → 

Runtime Analysis in Release 4.6A

[1\. Measurement in parallel session](#!ABAP_MODIFICATION_1@1@)

[2\. Measurement restrictions](#!ABAP_MODIFICATION_2@2@)

[3\. Aggregation](#!ABAP_MODIFICATION_3@3@)

[4\. Measurement variants](#!ABAP_MODIFICATION_4@4@)

[5\. Unique identification of internal tables](#!ABAP_MODIFICATION_5@5@)

[6\. Measurement for particular statements](#!ABAP_MODIFICATION_6@6@)

[7\. Hit lists](#!ABAP_MODIFICATION_7@7@)

[8\. Use of new tools](#!ABAP_MODIFICATION_8@8@)

[9\. Changes to the user interface](#!ABAP_MODIFICATION_9@9@)

Modification 1

Measurement in Parallel Session
Runtime analysis can be activated for ten simultaneous [ABAP sessions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmain_session_glosry.htm "Glossary Entry") (work processes). This makes it possible to switch to a long-running job from outside. It is possible to switch in and out of the work processes that are measured using a screen similar to transaction SM50.

Modification 2

Measurement Restrictions
It is possible to restrict the duration of a measurement, the size of the performance data file, and also the objects that are measured.

-   The duration of the measurement is specified in minutes.
    The measurement ends after this time.
    The maximum duration is approximately 72 minutes.
    
-   The size of the performance data file is specified in kilobytes. Once this size is reached, the measurement ends.
    
-   It is possible to restrict the measurement to specific objects:
    Programs and function groups
    Global and local classes
    Methods, subroutines, or function modules.
    Particular statements
    

Modification 3

Aggregation

Aggregations can be full aggregations and aggregations by callpoint. In full aggregation, all performance data for a particular type of event is summarized in a single performance record. In aggregations by callpoint, all performance data from a particular event onwards is summarized.

This makes it possible to use aggregation as the first step in a runtime analysis to identify the most time-consuming calls. The second, more detailed analysis can then be restricted to these objects.

Certain information does not exist when aggregations are used: There is no hierarchy. Furthermore, it is not possible to branch to the callpoint from a full aggregation. The effect of the display filter is that the events are displayed without their net times being recalculated.

Modification 4

Measurement Variants

The default variant is stored under the name DEFAULT. If this variant is changed, the changed data is assigned temporarily under the name USER\_DEFAULT. If the same restrictions are used frequently, it is best to create a variant. A variant exists only in the system in which it is created, and it can be used, changed, or deleted by any user.

Modification 5

Unique Identification of Internal Tables

The name of an internal table is the internally unique ID. This makes it possible to distinguish between identically named internal tables from different [procedures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprocedure_glosry.htm "Glossary Entry"). The actual name of the internal table can be identified by navigating to the editor.

Modification 6

Measurement for Particular Statements

The total runtime of all loop passes is determined in LOOP AT itab. CREATE OBJECT is only measured if the method CONSTRUCTOR is overwritten.

Modification 7

Hit Lists

In the hit list of the database tables, the buffering is empty if buffering is switched off or not allowed. As well as the database hit list, there are object-based hit lists for classes, instances, and internal tables. For classes and instances, there is a further division between methods and events.

Modification 8

Use of New Tools

The various hit lists are created using ABAP List Viewer. All normal ALV functions are available within the hit list, although full navigation from the list is not possible.

ABAP List Viewer is also used to display the performance statistics. They are calculated using method calls, and the load time and net runtime of the program are added to them.

Modification 9

Changes to the User Interface

The user interface of the runtime analysis tool has been fully revised. The new features are represented by four main areas, which can be branched to from the initial screen, namely:

-   Executing the runtime analysis
    
-   Switching on an ABAP session
    
-   Setting the measurement restrictions
    
-   Analyzing the measurement results